# centurion

./: Cargo.toml  build.rs
.github/workflows/: rust.yml
docs/: entity.puml  usecases.puml
proto/: messages.proto  schema.proto  services.proto
src/: factory.rs  main.rs
src/model/: aggregate.rs  error.rs  mod.rs
src/model/aggregate/: mod.rs  test.rs
src/model/value_object/: mod.rs  test.rs
src/repository/: error.rs  factory.rs  mod.rs  simple.rs  stub.rs
src/repository/simple/: error.rs  mod.rs  test.rs
src/service/: mod.rs  test.rs
src/service/grpc/: error.rs  factory.rs  mod.rs  test.rs
src/service/id/: factory.rs  mod.rs
src/service/test/: mod.rs  stub.rs
