[package]
name = "centurion"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
error-stack = "0.3"
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
async-trait = "0.1"
tonic = "0.9"
prost = "0.11"
uuid = {version = "1.4", features = ["v4"]}
log = "0.4"
env_logger = "0.10"

[build-dependencies]
tonic-build = "0.9"
